Broadway CHAIN - SANDBOX/src/objects/Hubs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Closed_due_to_capacity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed due to capacity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_due_to_risk_issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed due to risk issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_due_to_staffing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed due to staffing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hub_Name__c</fullName>
        <label>Hub name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hub open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_close__c</fullName>
        <label>Reason for close</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Hubs</label>
</CustomObject>